# hangman

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
hangman/: api.py  cli.py  cli_utils.py  models.py  repo.py  utils.py  views.py
online-hangman/: api.py  cli.py  cli_utils.py  models.py  repo.py  utils.py  views.py
src/hangman/: __init__.py  api.py  cli.py  cli_utils.py  models.py  repo.py  schemas.py  utils.py  views.py
src/hangman/api/: app.py  utils.py
src/hangman/api_main/: app.py  services.py  utils.py
src/hangman/api_words/: app.py  services.py  utils.py
src/hangman/cli/: app.py  services.py  utils.py
src/hangman/models/: __init__.py  common.py  game.py  player.py
src/hangman/repos/: __init__.py  base.py  game.py  player.py  word.py
src/hangman/res/: __init__.py
