[project]
name = "hangman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "click==8.1.7",
    "fastapi==0.115.6",
    "h11==0.14.0",
    "idna==3.10",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pygments==2.18.0",
    "requests>=2.32.5",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
]
