[project]
name = "hangman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damien THIRION", email = "damien.thirion@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.1",
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "requests>=2.32.5",
    "uvicorn>=0.34.0",
]

[project.scripts]
hangman = "hangman.cli:app"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
